--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
