--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <ul>
